--- a/index.html
+++ b/index.html
@@ -110,6 +110,15 @@
 				</ul>
 			</div>
 		</nav>
+
+		<!--==================== MOBILE NAV ====================-->
+		<div class="nav__mobile">
+			<div class="nav__mobile-hamburger">
+				<div class="nav__mobile-hamburger-bar"></div>
+				<div class="nav__mobile-hamburger-bar"></div>
+				<div class="nav__mobile-hamburger-bar"></div>
+			</div>
+		</div>
 	</header>
 </body>
 
