--- a/index.html
+++ b/index.html
@@ -120,6 +120,95 @@
 			</div>
 		</div>
 	</header>
+
+	<!--==================== MAIN ====================-->
+	<main>
+		<div class="promo">
+			<div class="promo__container container">
+				<h1 class="promo__header">Projects</h1>
+				<p class="promo__text">From configuration to security, web apps to big data&mdash;whatever
+					the infrastructure needs of your application may be, there is a Spring Project to help you build
+					it. Start small and use just what you need&mdash;Spring is modular by design.
+				</p>
+			</div>
+		</div>
+
+		<!--====================== PROJECTS ======================-->
+		<div class="content">
+			<div class="container">
+				<section class="projects__section">
+					<div class="projects__wrapper">
+						<a class="projects__item" href="#">
+							<div class="project__icon">
+								<img class="project__icon-img" src="/icons/spring-boot.svg" alt="project icon">
+							</div>
+							<div class="project__text">
+								<h3>Spring Boot</h3>
+								<p>Takes an opinionated view of building Spring applications and gets you up and
+									running as quickly as possible.
+								</p>
+							</div>
+						</a>
+						<a class="projects__item" href="#">
+							<div class="project__icon">
+								<img class="project__icon-img" src="/icons/spring-framework.svg" alt="project icon">
+							</div>
+							<div class="project__text">
+								<h3>Spring Framework</h3>
+								<p>Provides core support for dependency injection, transaction management, web
+									apps, data access, messaging, and more.
+								</p>
+							</div>
+						</a>
+						<a class="projects__item" href="#">
+							<div class="project__icon">
+								<img class="project__icon-img" src="/icons/spring-data.svg" alt="project icon">
+							</div>
+							<div class="project__text">
+								<h3>Spring Data</h3>
+								<p>Provides a consistent approach to data access – relational, non-relational,
+									map-reduce, and beyond.
+								</p>
+							</div>
+						</a>
+						<a class="projects__item" href="#">
+							<div class="project__icon">
+								<img class="project__icon-img" src="/icons/spring-cloud.svg" alt="project icon">
+							</div>
+							<div class="project__text">
+								<h3>Spring Cloud</h3>
+								<p>Provides a set of tools for common patterns in distributed systems. Useful
+									for building and deploying microservices.
+								</p>
+							</div>
+						</a>
+						<a class="projects__item" href="#">
+							<div class="project__icon">
+								<img class="project__icon-img" src="/icons/spring-data-flow.svg" alt="project icon">
+							</div>
+							<div class="project__text">
+								<h3>Spring Cloud Data Flow</h3>
+								<p>Provides an orchestration service for composable data microservice
+									applications on modern runtimes.
+								</p>
+							</div>
+						</a>
+						<a class="projects__item" href="#">
+							<div class="project__icon">
+								<img class="project__icon-img" src="/icons/spring-security.svg" alt="project icon">
+							</div>
+							<div class="project__text">
+								<h3>Spring Security</h3>
+								<p>Protects your application with comprehensive and extensible authentication
+									and authorization support.
+								</p>
+							</div>
+						</a>
+					</div>
+				</section>
+			</div>
+		</div>
+	</main>
 </body>
 
 </html>
