--- a/index.html
+++ b/index.html
@@ -2,213 +2,148 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spring | Projects</title>
-    <link rel="stylesheet" href="./css/style.css" />
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Spring | Projects</title>
+	<link rel="shortcut icon" href="#">
+	<link rel="stylesheet" href="./css/style.css" />
 </head>
 
 <body>
-    <!--==================== HEADER ====================-->
-    <header>
-        <nav class="nav">
-            <div class="container nav__container">
-                <a href="#">
-                    <img class="nav__logo" src="./icons/spring-logo.svg" alt="logo">
-                </a>
-                <ul class="nav__items">
-                    <li>
-                        <div class="nav__dropdown">
-                            <span>Why Spring</span>
-                            <div class="nav__dropdown-arrow"></div>
-                            <div class="nav__dropdown-target nav__why-target"></div>
-                            <div class="nav__dropdown-content">
-                                <ul class="nav__dropdown-content-list">
-                                    <li><a href="#">Overview</a></li>
-                                    <li><a href="#">Microservices</a></li>
-                                    <li><a href="#">Reactive</a></li>
-                                    <li><a href="#">Event Driven</a></li>
-                                    <li><a href="#">Cloud</a></li>
-                                    <li><a href="#">Web Applications</a></li>
-                                    <li><a href="#">Serverless</a></li>
-                                    <li><a href="#">Batch</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="nav__dropdown">
-                            <span>Learn</span>
-                            <div class="nav__dropdown-arrow"></div>
-                            <div class="nav__dropdown-target nav__learn-target"></div>
-                            <div class="nav__dropdown-content">
-                                <ul class="nav__dropdown-content-list">
-                                    <li><a href="#">Overview</a></li>
-                                    <li><a href="#">Quickstart</a></li>
-                                    <li><a href="#">Guides</a></li>
-                                    <li><a href="#">Blog</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="nav__dropdown">
-                            <span>Projects</span>
-                            <div class="nav__dropdown-arrow"></div>
-                            <div class="nav__dropdown-target nav__project-target"></div>
-                            <div class="nav__dropdown-content">
-                                <ul class="nav__dropdown-content-list">
-                                    <li><a href="#">Overview</a></li>
-                                    <li><a href="#">Spring Boot</a></li>
-                                    <li><a href="#">Spring Framework</a></li>
-                                    <li><a href="#">Spring Cloud</a></li>
-                                    <li><a href="#">Spring Cloud Data Flow</a></li>
-                                    <li><a href="#">Spring Data</a></li>
-                                    <li><a href="#">Spring Integration</a></li>
-                                    <li><a href="#">Spring Batch</a></li>
-                                    <li><a href="#">Spring Security</a></li>
-                                    <li><a class="nav__dropdown-content_blue" href="#">View all projects</a></li>
-                                    <li class="nav__dropdown-content-subtitle">Development Tools</li>
-                                    <li><a href="#">Spring Tools 4</a></li>
-                                    <li><a href="#">Spring Initializr
-                                            <svg class="nav__dropdown-link-icon" xmlns="http://www.w3.org/2000/svg"
-                                                viewBox="0 0 16 16">
-                                                <polyline points="15 10.94 15 15 1 15 1 1 5.06 1" fill="none"
-                                                    stroke="currentColor" stroke-miterlimit="10" stroke-width="2" />
-                                                <polyline points="8.93 1 15 1 15 7.07" fill="none" stroke="currentColor"
-                                                    stroke-miterlimit="10" stroke-width="2" />
-                                                <line x1="15" y1="1" x2="8" y2="8" fill="none" stroke="currentColor"
-                                                    stroke-miterlimit="10" stroke-width="2" />
-                                            </svg>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <a class="nav__items-link" href="#">Training</a>
-                    </li>
-                    <li>
-                        <a class="nav__items-link" href="#">Support</a>
-                    </li>
-                    <li>
-                        <div class="nav__dropdown">
-                            <span>Community</span>
-                            <div class="nav__dropdown-arrow"></div>
-                            <div class="nav__dropdown-target nav__community-target"></div>
-                            <div class="nav__dropdown-content">
-                                <ul class="nav__dropdown-content-list">
-                                    <li><a href="#">Overview</a></li>
-                                    <li><a href="#">Events</a></li>
-                                    <li><a href="#">Team</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+	<!--==================== HEADER ====================-->
+	<header>
+		<nav class="nav">
+			<div class="container nav__container">
+				<a href="#">
+					<img class="nav__logo" src="./icons/spring-logo.svg" alt="logo">
+				</a>
+				<ul class="nav__items">
+					<li>
+						<div class="nav__dropdown">
+							<span>Why Spring</span>
+							<div class="nav__dropdown-arrow"></div>
+							<div class="nav__dropdown-target nav__why-target"></div>
+							<div class="nav__dropdown-content">
+								<ul class="nav__dropdown-content-list">
+									<li><a href="#">Overview</a></li>
+									<li><a href="#">Microservices</a></li>
+									<li><a href="#">Reactive</a></li>
+									<li><a href="#">Event Driven</a></li>
+									<li><a href="#">Cloud</a></li>
+									<li><a href="#">Web Applications</a></li>
+									<li><a href="#">Serverless</a></li>
+									<li><a href="#">Batch</a></li>
+								</ul>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="nav__dropdown">
+							<span>Learn</span>
+							<div class="nav__dropdown-arrow"></div>
+							<div class="nav__dropdown-target nav__learn-target"></div>
+							<div class="nav__dropdown-content">
+								<ul class="nav__dropdown-content-list">
+									<li><a href="#">Overview</a></li>
+									<li><a href="#">Quickstart</a></li>
+									<li><a href="#">Guides</a></li>
+									<li><a href="#">Blog</a></li>
+								</ul>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="nav__dropdown">
+							<span>Projects</span>
+							<div class="nav__dropdown-arrow"></div>
+							<div class="nav__dropdown-target nav__project-target"></div>
+							<div class="nav__dropdown-content">
+								<ul class="nav__dropdown-content-list">
+									<li><a href="#">Overview</a></li>
+									<li><a href="#">Spring Boot</a></li>
+									<li><a href="#">Spring Framework</a></li>
+									<li><a href="#">Spring Cloud</a></li>
+									<li><a href="#">Spring Cloud Data Flow</a></li>
+									<li><a href="#">Spring Data</a></li>
+									<li><a href="#">Spring Integration</a></li>
+									<li><a href="#">Spring Batch</a></li>
+									<li><a href="#">Spring Security</a></li>
+									<li><a class="nav__dropdown-content_blue" href="#">View all projects</a></li>
+									<li class="nav__dropdown-content-subtitle">Development Tools</li>
+									<li><a href="#">Spring Tools 4</a></li>
+									<li><a href="#">Spring Initializr
+											<svg class="nav__dropdown-link-icon" xmlns="http://www.w3.org/2000/svg"
+												viewBox="0 0 16 16">
+												<polyline points="15 10.94 15 15 1 15 1 1 5.06 1" fill="none"
+													stroke="currentColor" stroke-miterlimit="10" stroke-width="2" />
+												<polyline points="8.93 1 15 1 15 7.07" fill="none" stroke="currentColor"
+													stroke-miterlimit="10" stroke-width="2" />
+												<line x1="15" y1="1" x2="8" y2="8" fill="none" stroke="currentColor"
+													stroke-miterlimit="10" stroke-width="2" />
+											</svg>
+										</a>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</li>
+					<li>
+						<a class="nav__items-link" href="#">Training</a>
+					</li>
+					<li>
+						<a class="nav__items-link" href="#">Support</a>
+					</li>
+					<li>
+						<div class="nav__dropdown">
+							<span>Community</span>
+							<div class="nav__dropdown-arrow"></div>
+							<div class="nav__dropdown-target nav__community-target"></div>
+							<div class="nav__dropdown-content">
+								<ul class="nav__dropdown-content-list">
+									<li><a href="#">Overview</a></li>
+									<li><a href="#">Events</a></li>
+									<li><a href="#">Team</a></li>
+								</ul>
+							</div>
+						</div>
+					</li>
+				</ul>
+			</div>
+		</nav>
 
-        <!--==================== MOBILE NAV ====================-->
-        <div class="nav__mobile">
-            <div class="nav__mobile-hamburger">
-                <div class="nav__mobile-hamburger-bar"></div>
-                <div class="nav__mobile-hamburger-bar"></div>
-                <div class="nav__mobile-hamburger-bar"></div>
-            </div>
-        </div>
-    </header>
+		<!--==================== MOBILE NAV ====================-->
+		<div class="nav__mobile">
+			<div id="hamburger" class="nav__mobile-hamburger">
+				<div class="nav__mobile-hamburger-bar"></div>
+				<div class="nav__mobile-hamburger-bar"></div>
+				<div class="nav__mobile-hamburger-bar"></div>
+			</div>
+		</div>
+	</header>
 
-    <!--==================== MAIN ====================-->
-    <main>
-        <div class="promo">
-            <div class="promo__container container">
-                <h1 class="promo__header">Projects</h1>
-                <p class="promo__text">From configuration to security, web apps to big data&mdash;whatever
-                    the infrastructure needs of your application may be, there is a Spring Project to help you build
-                    it. Start small and use just what you need&mdash;Spring is modular by design.
-                </p>
-            </div>
-        </div>
+	<!--==================== MAIN ====================-->
+	<main>
+		<div class="promo">
+			<div class="promo__container container">
+				<h1 class="promo__header">Projects</h1>
+				<p class="promo__text">From configuration to security, web apps to big data&mdash;whatever
+					the infrastructure needs of your application may be, there is a Spring Project to help you build
+					it. Start small and use just what you need&mdash;Spring is modular by design.
+				</p>
+			</div>
+		</div>
 
-        <!--====================== PROJECTS ======================-->
-        <div class="content">
-            <div class="container">
-                <section class="projects__section">
-                    <div class="projects__wrapper">
-                        <a class="projects__item" href="#">
-                            <div class="project__icon">
-                                <img class="project__icon-img" src="./icons/spring-boot.svg" alt="project">
-                            </div>
-                            <div class="project__text">
-                                <h3>Spring Boot</h3>
-                                <p>Takes an opinionated view of building Spring applications and gets you up and
-                                    running as quickly as possible.
-                                </p>
-                            </div>
-                        </a>
-                        <a class="projects__item" href="#">
-                            <div class="project__icon">
-                                <img class="project__icon-img" src="./icons/spring-framework.svg" alt="project">
-                            </div>
-                            <div class="project__text">
-                                <h3>Spring Framework</h3>
-                                <p>Provides core support for dependency injection, transaction management, web
-                                    apps, data access, messaging, and more.
-                                </p>
-                            </div>
-                        </a>
-                        <a class="projects__item" href="#">
-                            <div class="project__icon">
-                                <img class="project__icon-img" src="./icons/spring-data.svg" alt="project">
-                            </div>
-                            <div class="project__text">
-                                <h3>Spring Data</h3>
-                                <p>Provides a consistent approach to data access – relational, non-relational,
-                                    map-reduce, and beyond.
-                                </p>
-                            </div>
-                        </a>
-                        <a class="projects__item" href="#">
-                            <div class="project__icon">
-                                <img class="project__icon-img" src="./icons/spring-cloud.svg" alt="project">
-                            </div>
-                            <div class="project__text">
-                                <h3>Spring Cloud</h3>
-                                <p>Provides a set of tools for common patterns in distributed systems. Useful
-                                    for building and deploying microservices.
-                                </p>
-                            </div>
-                        </a>
-                        <a class="projects__item" href="#">
-                            <div class="project__icon">
-                                <img class="project__icon-img" src="./icons/spring-data-flow.svg" alt="project">
-                            </div>
-                            <div class="project__text">
-                                <h3>Spring Cloud Data Flow</h3>
-                                <p>Provides an orchestration service for composable data microservice
-                                    applications on modern runtimes.
-                                </p>
-                            </div>
-                        </a>
-                        <a class="projects__item" href="#">
-                            <div class="project__icon">
-                                <img class="project__icon-img" src="./icons/spring-security.svg" alt="project">
-                            </div>
-                            <div class="project__text">
-                                <h3>Spring Security</h3>
-                                <p>Protects your application with comprehensive and extensible authentication
-                                    and authorization support.
-                                </p>
-                            </div>
-                        </a>
-                    </div>
-                </section>
-            </div>
-        </div>
-    </main>
+		<!--====================== PROJECTS ======================-->
+		<div class="content">
+			<div class="container">
+				<section class="projects__section">
+					<div class="projects__wrapper"></div>
+				</section>
+			</div>
+		</div>
+	</main>
+	<script src="./js/script.js"></script>
 </body>
 
 </html>
